make sure mpAlphaVDev is drawn when drawing lines (tdf#137974)

4deadc3c78949c18bb886eb1f66caa8f3cd7a2df made OutputDevice::DrawLine()
use SalGraphics::DrawPolyLine() in more cases, which revealed that
the the function was bailing out after the call and not drawing
also to mpAlphaVDev.

Change-Id: I1145d3684835b536737311294edfc566d5eb9025
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105553
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>